--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -8,11 +8,13 @@
   </tr>
   <% @links.each do |link| %>
     <tr>
-      <td><%= link.slug %></td>
+      <td><a href="/links/<%= link.slug %>"><%= link.slug %></a></td>
       <td><%= link.target_url %></td>
       <td><%= link.created_at %></td>
     </tr>
   <% end %>
-<table>
+</table>
 
 <li class="active"><a href="/links/new">Add New Link</a></li>
+
+
